static/app.css
@font-face {
    font-family: 'Cloudy';
    src: url('/static/fonts/Cloudy-0W244.ttf') format('truetype');

}

@font-face {
    font-family: 'SoCloudy';
    src: url('/static/fonts/SoCloudy-PV7yd.otf') format('truetype');

}

@font-face {
    font-family: 'RobotoSlab';
    src: url('/static/fonts/RobotoSlab-Regular.ttf') format('truetype');

}

@font-face {
    font-family: 'RobotoSlabDark';
    src: url('/static/fonts/RobotoSlab-Black.ttf') format('truetype');

}

body{
  color: #40514E;
  margin: 0;
  text-align: center;
  font-family: "Merriweather", serif;
    position: relative;

}
html{
     scroll-padding-top: 100px;
}
html,body{

    overflow-x:hidden;
    max-width: 100%;
}
h1{
  font-size: 5.625rem;
  margin: 50px auto 0 auto;
  /* line-height: 2; */

  font-family: "Sacramento", cursive;
  color: #66BFBF;


}
h2{
  /*font-family: "Montserrat", sans-serif;*/
     font-family: 'RobotoSlabDark', 'sans-serif';
  font-size: 2.5rem;
  color: #66BFBF;
  padding-bottom: 10px;
}

h3{
  font-family: "Montserrat", sans-serif;
  color: #11999E;
}

a{
  color: #11999E;
  text-decoration: none;
}

p{
  line-height: 2;
}
/* #EAF6F6 */
/* hr{
border: dotted lightgrey 6px;
border-bottom: none;
width: 4%;
margin: 100px;
} */

hr{
  border-style:none;
  border-top-style: dotted;
  border-color: lightgrey;
  border-width: 5px;
  /* height: 0px; */
  width: 5%;
}


table, th, td{
  border: 1px solid black;
}

table{
  width: 100%;
}

ul{
  list-style: none;
}

/*Navbar styling*/

.nav{
background-color: #66BFBF;
    color: white;
}

.nav-item{
  color: white;
}

.nav-item:hover{
    font-family: 'RobotoSlabDark','sans-serif';
}


.filter-nav{
    border: solid #11999E !important;

}
.filter-nav .nav-item{
    border: solid #11999E !important;
}
.active{
    font-family: 'RobotoSlabDark', 'sans-serif';
}


.p1{
  margin:5px auto 5px;
  border: 1px #66BFBF solid;
  border-radius: 25px;
  text-align: left;
  width: 50%;
  line-height: 2;
  float: left;
  margin-right: 15px;
  margin-left: 100px;



}
.p2{
  margin:5px auto 5px;
  border: 1px #66BFBF solid;
  border-radius: 25px;
  text-align: left;
  width: 50%;
  line-height: 2;
  float: right;
  margin-left: 15px;
  margin-right: 100px;
}
.p3{
  margin:5px auto 5px;
  border: 1px #66BFBF solid;
  border-radius: 25px;
  text-align: left;
  width: 50%;
  line-height: 2;
  float: left;
  margin-right: 15px;
  margin-left: 100px;
}
.p4{
  margin:5px auto 5px;
  border: 1px #66BFBF solid;
  border-radius: 25px;
  text-align: left;
  width: 50%;
  line-height: 2;
  float: right;
  margin-left: 15px;
  margin-right: 100px;
}

.topPage{
  background-color: #E4F9F5;
  position: relative;
  padding-top: 20px;

}



/*.btn{*/
/*    background-color: #66BFBF;*/
/*    color: white;*/
/*}*/

/*.btn:hover{*/
/*    background-color: white;*/
/*    color: #66BFBF;*/
/*}*/


.programmer{
  font-weight: normal;
}

.hero-div{
  background-color: #E4F9F5;
  position: relative;
  padding-top: 300px;
  padding-bottom: 10px;

}
.middle-container{
  margin:100px 0;

}

.contact-me{
  padding: 50px;
  padding-bottom: 100px;
  line-height: 2;
}

.bottom-container{
  background-color: #66BFBF;
  padding: 50px 0 20px;
  line-height: 2;

}

/*Skill styling*/
.skill-row{
  width: 50%;
  margin:100px auto 100px auto;
  text-align: left;
  line-height: 2;

}

.skillImgLeft{
  /* width: 25%; */
  float: left;
  margin-right: 30px;
}

.skillImgRight{
  /* width: 25%; */
  float: right;
  margin-left: 30px;
}


.tm{
  color: #EAF6F6;
  font-size: 0.75rem;
  padding: 20px 0;
}

.footer-link{
  margin:10px 20px;
  text-decoration: none;
  font-family: "Montserrat", sans-serif;

}

.footer-link:hover{
  color: #EAF6F6;
}



.pro{
  text-decoration: underline;

}

.intro{
  width: 50%;
  margin: auto;
}
.contact-message{
  width: 40%;
  margin:40px auto 60px;
}

.Python{
  text-decoration: none;
}
.Python:hover{
  /* color: #EAF6F6; */
  color: blue;
  text-decoration: none;
}


.Java{
  text-decoration: none;
}
.Java:hover{
  /* color: #EAF6F6; */
  color: blue;
  text-decoration: none;
}

.pythonTable{
  /* margin: 40px 100px 60px; */
  margin:40px 0 1560px 100px;
  line-height: 2;
}

.prolink:hover{
  /* color: #EAF6F6; */
  color: blue;
  text-decoration: none;
}






.top-cloud{
  position: absolute;
  right: 300px;
  top: 50px;

}
.bottom-cloud{
  position: absolute;
  left:250px;
  bottom: 300px;

}




.back_button{
  position: absolute;
  top: auto;
  left:0;
  right:94%;
  bottom: 4%;
  margin:0 auto;
}
.back_button:hover{
  color: blue;
}

.projectTitle{
  margin-right:990px;
  text-decoration:underline;
  font-weight:bold;
  white-space: nowrap;

}
/*Certfication styling*/
.google_it_cert{
    width: 60%;
    height: auto;
}

.min_cert {
    margin: 10px 15px;
}

/*Project card styling*/
.card-img-top{
    max-width: 18rem;
}
.card{
    max-width: 18rem;
    border: #11999E;
    border-style: dashed;
    background-color: #E4F9F5;
}
.card-title{
    font-family: 'RobotoSlabDark', 'sans-serif';
    color: #11999E;
}


/*Added styling to clouds to animate them*/
.top-cloud {
  padding-top: 30px;
    position: absolute;
    animation: moveCloud 20s linear infinite;
    will-change: transform; /* Optimizes animation performance */
    -webkit-backface-visibility: hidden; /* Prevents flickering */
    -webkit-perspective: 1000px;
}
.bottom-cloud {
    position: absolute;
    animation: moveCloudRight 20s linear infinite;
    will-change: transform; /* Optimizes animation performance */
    -webkit-backface-visibility: hidden; /* Prevents flickering */
    -webkit-perspective: 1000px;
}

/*Animations*/
@keyframes waveAnim {
    0%,40%,100%{
        transform: translateY(0);
    }
    20%{
        transform: translateY(-50px);
    }

}

@keyframes slideInLeft {
    from{
        transform: translateX(-300px);
    }
    to{
        transform: translateX(0);

    }
}

@keyframes slideInRight {
    from{
        transform: translateX(300px);
    }
    to{
        transform: translateX(0);

    }
}
@keyframes cloudFloatLeft {
  0%, 100%{
    transform: translateX(0);
  }
  20%, 80%{
    transform: translateX(-100px);
  }

  40%, 60%{
    transform: translateX(-200px);
  }


}

@keyframes moveCloud {
    from {
        right: -150px; /* Start position off-screen right (adjust based on image width) */
    }
    to {
        right: 100%; /* End position off-screen left */
    }
}

@keyframes moveCloudRight {
    from {
        left: -150px; /* Start position off-screen left (adjust based on image width) */
    }
    to {
        left: 100%; /* End position off-screen right */
    }
}
@keyframes fadeInOpacity {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}
/*Utility classes */
.slideInLeft{
      animation: slideInLeft 1s ease-in;
}

.cloudFloatLeft{
  animation: cloudFloatLeft 5s ease-in infinite;
}

.top-cloud-1 {
    animation: moveCloud 20s linear infinite;
}

.top-cloud-2 {
    animation: moveCloud 25s linear infinite;
}

.top-cloud-3 {
    animation: moveCloud 30s linear infinite;
}


/* Animations for skills*/
/*.skill-row {*/
/*    opacity: 0;*/
/*    transform: translateX(-100%);*/
/*    transition: all 1s ease-out;*/
/*}*/

/*.skill-row:nth-child(even) {*/
/*    transform: translateX(100%);*/
/*}*/

/*.skill-row.slide-in {*/
/*    opacity: 1;*/
/*    transform: translateX(0);*/
/*}*/
.skillImgLeft {
    opacity: 0;
    transform: translateX(-100%);  /* Changed to come from left */
    transition: all 1s ease-out;
}

.skillImgRight {
    opacity: 0;
    transform: translateX(100%);  /* Changed to come from right */
    transition: all 1s ease-out;
}

.skillTxtLeft {
    opacity: 0;
    transform: translateX(-100%);
    transition: all 1s ease-out;
}

.skillTxtRight {
    opacity: 0;
    transform: translateX(100%);
    transition: all 1s ease-out;
}

/* Common slide-in animation end state */
.skillImgLeft.slide-in,
.skillImgRight.slide-in,
.skillTxtLeft.slide-in,
.skillTxtRight.slide-in {
    opacity: 1;
    transform: translateX(0);
}

.projBut {
    opacity: 0;
    transition: all 1.5s ease-out;
    /* Optional: you can add a small vertical movement */
    transform: translateY(20px);
}

.projBut.fade-in {
    opacity: 1;
    transform: translateY(0);
}

.hero-title{
    opacity: 1;
	animation-name: fadeInOpacity;
	animation-iteration-count: 1;
	animation-timing-function: ease-in;
	animation-duration: 2s

}

.programmer{
    opacity: 1;
	animation-name: fadeInOpacity;
	animation-iteration-count: 1;
	animation-timing-function: ease-in;
	animation-duration: 6s

}




.mountain-img {
    max-width: 100%;
    height: auto;
    display: block;
}

/*Mobile changes*/
@media screen and (max-width: 768px) {
    .min_cert{
        margin-left: 25%;
    }
    
    .mountain-img {
        max-width: 90%;
        margin: 0 auto;
    }
}

